--- a/Software/SCVZ Menza+/SCVZ Menza+/SCVZ Menza+.csproj
+++ b/Software/SCVZ Menza+/SCVZ Menza+/SCVZ Menza+.csproj
@@ -49,34 +49,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Azuriranje.cs">
+    <Compile Include="FrmAzuriranje.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Azuriranje.Designer.cs">
-      <DependentUpon>Azuriranje.cs</DependentUpon>
+    <Compile Include="FrmAzuriranje.Designer.cs">
+      <DependentUpon>FrmAzuriranje.cs</DependentUpon>
     </Compile>
-    <Compile Include="Narudzba.cs">
+    <Compile Include="FrmNarudzba.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Narudzba.Designer.cs">
-      <DependentUpon>Narudzba.cs</DependentUpon>
+    <Compile Include="FrmNarudzba.Designer.cs">
+      <DependentUpon>FrmNarudzba.cs</DependentUpon>
     </Compile>
-    <Compile Include="Pretrazivanje i pregled.cs">
+    <Compile Include="FrmPretrazivanjeNarudzbi.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Pretrazivanje i pregled.Designer.cs">
-      <DependentUpon>Pretrazivanje i pregled.cs</DependentUpon>
+    <Compile Include="FrmPretrazivanjeNarudzbi.Designer.cs">
+      <DependentUpon>FrmPretrazivanjeNarudzbi.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Azuriranje.resx">
-      <DependentUpon>Azuriranje.cs</DependentUpon>
+    <EmbeddedResource Include="FrmAzuriranje.resx">
+      <DependentUpon>FrmAzuriranje.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Narudzba.resx">
-      <DependentUpon>Narudzba.cs</DependentUpon>
+    <EmbeddedResource Include="FrmNarudzba.resx">
+      <DependentUpon>FrmNarudzba.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pretrazivanje i pregled.resx">
-      <DependentUpon>Pretrazivanje i pregled.cs</DependentUpon>
+    <EmbeddedResource Include="FrmPretrazivanjeNarudzbi.resx">
+      <DependentUpon>FrmPretrazivanjeNarudzbi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
