--- a/Software/SCVZ Menza+/SCVZ Menza+/SCVZ Menza+.csproj
+++ b/Software/SCVZ Menza+/SCVZ Menza+/SCVZ Menza+.csproj
@@ -67,6 +67,7 @@
     <Compile Include="FrmPretrazivanjeNarudzbi.Designer.cs">
       <DependentUpon>FrmPretrazivanjeNarudzbi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Narudzba.cs" />
     <Compile Include="Models\Obrok.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
